TW20297816 fix board column sorting in non-single user mode and prevent text overflowing the post container

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -210,7 +210,9 @@
 }
 
 .path-mod-board {
-
+    .mod_board_note_text {
+        word-break: break-word;
+    }
     .comment {
         .comment-input {
             font-size: 0.8rem;
